@@ -20,7 +20,7 @@ SRC=\
  Console.ml \
  Fpath.ml Fpath_.ml Ftype.ml \
  Logs.ml Logs_.ml \
- Chan.ml UChan.ml FS.ml IO.ml Tmp.ml \
+ Chan.ml FS.ml IO.ml Tmp.ml \
  Cmd.ml Proc.ml \
  Date.ml Bits.ml Rune.ml \
  Exception.ml Exit.ml \
